<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.acces.LoginActivity"
    android:background="@color/fondo_aplicacion"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="211dp"
        android:layout_height="162dp"


        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_logo_small_diagonal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_higlightbox"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="src_over"
        android:gravity="center"
        android:text="@string/iniciar_sesi_n"
        android:textColor="@color/black"
        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.23" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="330dp"
        android:layout_height="230dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/InicioSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Iniciar sesión"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/mailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"

                />
            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@drawable/shape_higlightbox"
                android:paddingLeft="16dp"
                android:paddingRight="10dp"
                android:inputType="textEmailAddress"

                />
        </LinearLayout>
        <TextView
            android:id="@+id/textViewPassw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasenia"
            android:textSize="18sp"


            />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_higlightbox"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="10dp"


            />

    </LinearLayout>

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoRegistrarse"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.275" />

</androidx.constraintlayout.widget.ConstraintLayout>